# imm-extension-template

./: Makefile  README.md  cookiecutter.json
{{cookiecutter.package_name}}/: .flake8  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
{{cookiecutter.package_name}}/.github/: pr-label.yml  release-drafter.yml
{{cookiecutter.package_name}}/.github/workflows/: changelog.yml  pr-label-workflow.yml  pre-commit.yml  publish-extension.yml  release-workflow.yml  release.yml  tests.yml  update-store-listing.yml  update-template.yml  upload-packages.yml  upload-release.yml
{{cookiecutter.package_name}}/scripts/: add-version-to-store.py  publish.py
{{cookiecutter.package_name}}/tests/: conftest.py  extension_test.py  test_extension.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: const.py  extension.py
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/templates/{{cookiecutter.package_name}}/: hello_world.html
{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/tests/: __init__.py  test_extension.py
